--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app. :3 </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
